# pikaqiu

./: .env.example  .gitignore  Dockerfile.sandbox  LICENSE  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: reasoning_family_rules.json  test_family_mapping.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
knowledge/: readme.md
pikaqiu_agent/: __init__.py  __main__.py  config.py  knowledge.py  llm_client.py  memory.py  orchestrator.py  prompts.py  sandbox.py  storage.py  tools.py  web_app.py
pikaqiu_agent/static/: app.js  index.html  settings.html  styles.css
rag/: model_manager.py  rag_kdprepare.py
scripts/: ensure_sandbox.ps1  gen_tool_docs.py  install-service.sh  pikaqiu-agent.service  run_web.ps1  tpt-agent.service
scripts/sandbox-tools/: env-info
src/: api_server.py  cli.py  settings.py  workflow.py
src/agents/: __init__.py  act.py  parsing.py  reasoning.py
src/core/: __init__.py  mapping.py  models.py  state_table.py  task_tree.py
src/infra/: __init__.py  mcp.py
src/rag/: knowledge_service.py  rag_kdprepare.py
src/reasoning/: __init__.py  engine.py  models.py
src/runtime/: __init__.py  (+2 more)
tests/: __init__.py  fakes.py  test_act.py  test_api_server.py  test_mapping.py  test_mcp.py  test_parsing.py  test_reasoning_engine.py  test_state_table.py  test_task_tree.py  test_workflow.py
tpt_agent/: __main__.py  config.py  knowledge.py  llm_client.py  memory.py  orchestrator.py  prompts.py  sandbox.py  tools.py  web_app.py
(+22 files in other folders)
